# gardenflow

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/dev/: .env  Dockerfile  docker-compose.yml  justfile
features/files/: FEATURE.md
gardenflow/: __init__.py
gardenflow/cli/: main.py
gardenflow/core/: dags.py  logging.py  services.py
gardenflow/core/cli/: main.py
gardenflow/core/files/: services.py  settings.py
gardenflow/core/files/local/: services.py  settings.py
gardenflow/core/gardenio/: services.py  settings.py
gardenflow/core/gardenio/local/executable/: executors.py  services.py  settings.py
gardenflow/core/settings/: base.py
gardenflow/core/tenants/: services.py
gardenflow/example_dags/: extract_files.py  gardenflow_example.py  hello_gardenio.py  load_ogr.py  ogr2ogr_load.py
gardenflow/example_dags/gardenio/features/collections/: reproject.py
gardenflow/hooks/: gardenflow.py
gardenflow/operators/: gardenflow.py
gardenflow/operators/gardenio/: base.py  files.py  ogr2ogr.py
gardenflow/operators/gardenio/features/: collections.py
gardenflow/sensors/: gardenflow.py
tests/core/: test_dags.py
tests/hooks/: test_gardenflow_hook.py
tests/operators/: test_gardenflow_operator.py
tests/sensors/: test_gardenflow_sensor.py
